{
  "version": 4,
  "terraform_version": "1.16.2",
  "serial": 15,
  "lineage": "2021379b-0e46-277e-2c87-1ab93f215b87",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05a3e9423ae4d7a19",
            "arn": "arn:aws:ec2:us-east-1:293884603412:instance/i-0aa090483cb3ca06c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0aa090483cb3ca06c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "house-price-predictor-20260917",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c2c0204e4708ea1e",
            "private_dns": "ip-10-0-1-248.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.248",
            "public_dns": "ec2-3-92-144-194.compute-1.amazonaws.com",
            "public_ip": "3.92.144.194",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-048ee0431026f5b1e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04f52f3b95eab71ff",
            "tags": {
              "Name": "house-price-predictor"
            },
            "tags_all": {
              "Name": "house-price-predictor"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0071fbbb8d29d7562"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ml_coursera",
            "aws_subnet.ml_coursera",
            "aws_vpc.ml_coursera",
            "data.aws_ami.ubuntu_22_04"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ml_coursera",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:293884603412:internet-gateway/igw-0986b8514d56d30a7",
            "id": "igw-0986b8514d56d30a7",
            "owner_id": "293884603412",
            "tags": {
              "Name": "ml-coursera"
            },
            "tags_all": {
              "Name": "ml-coursera"
            },
            "vpc_id": "vpc-0b203d32a439df29f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.ml_coursera"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ml_coursera",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:293884603412:route-table/rtb-010e4249c8ea47109",
            "id": "rtb-010e4249c8ea47109",
            "owner_id": "293884603412",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0986b8514d56d30a7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ml-coursera"
            },
            "tags_all": {
              "Name": "ml-coursera"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b203d32a439df29f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.ml_coursera",
            "aws_vpc.ml_coursera"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ml_coursera",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a6f8c57cc0155f63",
            "route_table_id": "rtb-010e4249c8ea47109",
            "subnet_id": "subnet-04f52f3b95eab71ff"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.ml_coursera",
            "aws_route_table.ml_coursera",
            "aws_subnet.ml_coursera",
            "aws_vpc.ml_coursera"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ml_coursera",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:293884603412:security-group/sg-0071fbbb8d29d7562",
            "description": "SSH access for the ml-coursera EC2 instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0071fbbb8d29d7562",
            "ingress": [
              {
                "cidr_blocks": [
                  "71.113.76.77/32"
                ],
                "description": "SSH from approved public IPv4 address",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ml-coursera",
            "name_prefix": "",
            "owner_id": "293884603412",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ml-coursera"
            },
            "tags_all": {
              "Name": "ml-coursera"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b203d32a439df29f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.ml_coursera"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ml_coursera",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:293884603412:subnet/subnet-04f52f3b95eab71ff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04f52f3b95eab71ff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "293884603412",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ml-coursera"
            },
            "tags_all": {
              "Name": "ml-coursera"
            },
            "vpc_id": "vpc-0b203d32a439df29f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.ml_coursera"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ml_coursera",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:293884603412:vpc/vpc-0b203d32a439df29f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05948bdeaa2ede00e",
            "default_route_table_id": "rtb-0dd0bdd8bfe6bf4b1",
            "default_security_group_id": "sg-0409737bef8894b84",
            "dhcp_options_id": "dopt-837536e6",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b203d32a439df29f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0dd0bdd8bfe6bf4b1",
            "owner_id": "293884603412",
            "tags": {
              "Name": "ml-coursera"
            },
            "tags_all": {
              "Name": "ml-coursera"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}